Add ability to Hero, redactor output from methods. Update swagger, fix migrations
