# api/swagger/swagger.yml
@@ -18,13 +18,20 @@ paths:
           schema:
             type: string
           required: false
+        - name: ability
+          in: query
+          schema:
+            type: string
+          required: false
       responses:
         '200':
           description: "Успешно"
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Hero'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Hero'
     post:
       operationId: "api.controllers.hero.HeroController.create_hero"
       summary: "Создать нового героя"
@@ -131,6 +138,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFound'
+  /abilities:
+    get:
+      operationId: "api.controllers.hero.HeroController.abilities_list"
+      summary: "Справочник способностей"
+      description: "Возвращает все возможные способности"
+      responses:
+        '200':
+          description: 'Успешно'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Ability'
+
 
 components:
   schemas:
@@ -140,6 +162,13 @@ components:
         id:
           type: integer
         name:
+          type: string
+        ability:
+          type: string
+    Ability:
+      type: object
+      properties:
+        title:
           type: string
     NotFound:
       type: object
